--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    @@include('html/head.html',{
-        "title":"House"
-    })
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
+    
+    <title>House</title>
+</head>
     <body>
         <div class="wrapper">
-            @@include('html/header.html',{})
+            <header class="header">
+    <div class="container header__container">
+        <div class="header__logo logo">
+            <a href="/">
+                <span>PRAESENT</span>
+            </a>
+        </div>
+        <nav class="header__nav">
+            <ul class="header__ul">
+                <li class="header__li">
+                    <a href="/" class="header__li__a">Home</a>
+                </li>
+                <li class="header__li">
+                    <a href="/buy.html" class="header__li__a">Buy</a>
+                </li>
+                <li class="header__li">
+                    <a href="/about.html" class="header__li__a">About</a>
+                </li>
+                <li class="header__li">
+                    <a href="/blog.html" class="header__li__a">Blog</a>
+                </li>
+                <li class="header__li">
+                    <a href="/enquiries.html" class="header__li__a">Enquiries</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="nav__icon">
+            <span></span>
+        </div>
+    </div>
+</header>
             <main class="main">
                 <a href="#" class="home ibg">
-                    <img class="ibg-img" src="@img/home/home.jpg" alt="">
+                    <img class="ibg-img" src="img/home/home.jpg" alt="">
                     <div class="overlay"></div>
                     <div class="home__content">
                         <div class="home__title1 title1">
@@ -26,21 +63,21 @@
                         <div class="house__properties">
                             <div class="house__property">
                                 <div class="house__property__icon">
-                                    <img src="@img/home/bed-icon.svg" alt="">
+                                    <img src="img/home/bed-icon.svg" alt="">
                                 </div>
                                 <div class="house__property__count">4</div>
                                 <div class="house__property__value">&nbsp;Bed</div>
                             </div>
                             <div class="house__property">
                                 <div class="house__property__icon">
-                                    <img src="@img/home/bath-icon.svg" alt="">
+                                    <img src="img/home/bath-icon.svg" alt="">
                                 </div>
                                 <div class="house__property__count">3</div>
                                 <div class="house__property__value">&nbsp;Bath</div>
                             </div>
                             <div class="house__property">
                                 <div class="house__property__icon">
-                                    <img src="@img/home/car-icon.svg" alt="">
+                                    <img src="img/home/car-icon.svg" alt="">
                                 </div>
                                 <div class="house__property__count">3</div>
                                 <div class="house__property__value">&nbsp;Car</div>
@@ -54,7 +91,7 @@
                         <div class="worker__container">
                             <div class="worker">
                                 <a href="#" class="worker__img ibg">
-                                    <img src="@img/about/worker1.jpg" alt="" class="ibg-img">
+                                    <img src="img/about/worker1.jpg" alt="" class="ibg-img">
                                 </a>
                                 <div href="#" class="worker__info">
                                     <a href="#"class="worker__info__top">
@@ -71,7 +108,7 @@
                         <div class="worker__container">
                             <div class="worker">
                                 <a href="#" class="worker__img ibg">
-                                    <img src="@img/about/worker2.jpeg" alt="" class="ibg-img">
+                                    <img src="img/about/worker2.jpeg" alt="" class="ibg-img">
                                 </a>
                                 <div  class="worker__info">
                                     <a href="#" class="worker__info__top">
@@ -141,7 +178,7 @@
                         <div class="catalog__items listings__items">
                             <div class="catalog__item item3">
                                 <div class="catalog__item__img ibg">
-                                    <img class="ibg-img" src="@img/buy/house3.jpg" alt="">
+                                    <img class="ibg-img" src="img/buy/house3.jpg" alt="">
                                 </div>
                                 <div class="catalog__item__info">
                                     <div class="catalog__item__title1">Toorak</div>
@@ -149,19 +186,19 @@
                                     <div class="catalog__item__properties">
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/bed-icon.svg" alt="">
+                                                <img src="img/home/bed-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">4</div>                                        
                                         </div>
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/bath-icon.svg" alt="">
+                                                <img src="img/home/bath-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">3</div>                                        
                                         </div>
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/car-icon.svg" alt="">
+                                                <img src="img/home/car-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">3</div>                                        
                                         </div>
@@ -173,7 +210,7 @@
                             </div>
                             <div class="catalog__item item5">
                                 <div class="catalog__item__img ibg">
-                                    <img class="ibg-img" src="@img/buy/house5.jpg" alt="">
+                                    <img class="ibg-img" src="img/buy/house5.jpg" alt="">
                                 </div>
                                 <div class="catalog__item__info">
                                     <div class="catalog__item__title1">Toorak</div>
@@ -181,19 +218,19 @@
                                     <div class="catalog__item__properties">
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/bed-icon.svg" alt="">
+                                                <img src="img/home/bed-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">4</div>                                        
                                         </div>
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/bath-icon.svg" alt="">
+                                                <img src="img/home/bath-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">3</div>                                        
                                         </div>
                                         <div class="catalog__item__property">
                                             <div class="catalog__property__icon">
-                                                <img src="@img/home/car-icon.svg" alt="">
+                                                <img src="img/home/car-icon.svg" alt="">
                                             </div>
                                             <div class="catalog__property__count">3</div>                                        
                                         </div>
@@ -243,13 +280,70 @@
                 <div class="popup">
                     <div class="popup__body">
                         <div class="popup__content">
-                            <img src="@img/house-item/floorplan.jpg" alt="">
+                            <img src="img/house-item/floorplan.jpg" alt="">
                         </div>
                     </div>
                     <div class="popup__close icon-close"></div>
                 </div>
             </main>
-            @@include('html/footer.html',{})
+            <footer class="footer">
+    <div class="container footer__container">
+        <div class="footer__left">
+            <div class="footer__logo logo">
+                <a href="#">
+                    <span>PRAESENT</span>
+                </a>
+            </div>
+            <div class="footer__text">Real Estate Agent</div>
+            <nav class="footer__networks">
+                <ul class="footer__networks__ul">
+                    <li class="footer__networks__li">
+                        <a href="#" class="footer__networks__a">
+                            <img src="img/home/facebook-icon.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="footer__networks__li">
+                        <a href="#" class="footer__networks__a">
+                            <img src="img/home/twiitter-icon.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="footer__networks__li">
+                        <a href="#" class="footer__networks__a">
+                            <img src="img/home/intagram-icon.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="footer__networks__li">
+                        <a href="#" class="footer__networks__a">
+                            <img src="img/home/linkedin-icon.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer__right">
+            <div class="footer_right__title">Pages</div>
+            <nav class="footer__right__nav">
+                <ul class="footer__right__ul">
+                    <li class="footer__right__li">
+                        <a href="/" class="footer__right__a">Home</a>
+                    </li>
+                    <li class="footer__right__li">
+                        <a href="/buy.html" class="footer__right__a">Buy</a>
+                    </li>
+                    <li class="footer__right__li">
+                        <a href="/about.html" class="footer__right__a">About Company</a>
+                    </li>
+                    <li class="footer__right__li">
+                        <a href="/blog.html" class="footer__right__a">Blog</a>
+                    </li>
+                    <li class="footer__right__li">
+                        <a href="/enquiries.html" class="footer__right__a">Enquiries</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</footer>
         </div>
         <script src="js/app.min.js"></script>
     </body>
