--- a/index.html
+++ b/index.html
@@ -345,6 +345,6 @@
     </div>
 </footer>
         </div>
-        <script src="js/app.min.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
